--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lite-server": "^2.3.0"
   },
   "dependencies": {
-    "solc": "^0.8.13"
+    "solc": "^0.8.13",
+    "truffle-assertions": "^0.9.2"
   }
 }
